Project set up complete

--- a/src/pages/page-2.pug
+++ b/src/pages/page-2.pug
@@ -10,9 +10,8 @@ block content
 
         .ids__stack.M
 
-        h1 Сайт про истории кнопок
-        p Вот тут у нас будет первая страница
+        h1 тут у нас вторая страница
         h2
-          a(href='/page 2') Далее
+          a(href='/page-3') Далее
 
         
