--- a/src/pages/page-3.pug
+++ b/src/pages/page-3.pug
@@ -10,9 +10,7 @@ block content
 
         .ids__stack.M
 
-        h1 Сайт про истории кнопок
-        p Вот тут у нас будет первая страница
-        h2
-          a(href='/page 2') Далее
+        h1 тут у нас тряться страница
+        h2 А всё, конец
 
         
