--- a/src/pages/partials/header.pug
+++ b/src/pages/partials/header.pug
@@ -5,6 +5,6 @@ header
     +a.logo(href="/")
       .img-wrapper
         img(src="/favicon.png")
-      span Layer-0
-    +a(href="/design-system") Дизайн-система
+      span История кнопок
+    //- +a(href="/design-system") Дизайн-система
     //- шапка сайта
