Explanation of pug

--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -4,15 +4,20 @@ block meta
   +meta(title="Layer 0", description="Шаблон сайта проектов Интуиции", og-image="/images/IMG_0202.jpg")
 
 block content
+
   .ids__wrapper
     .ids__text
       section
-
         .ids__stack.M
 
+        img(src="/images/poster.jpg", alt="")
+
         h1 Сайт про истории кнопок
+
         p Вот тут у нас будет первая страница
+        
         h2
-          a(href='/page 2') Далее
+          a(href='/page-2') Далее
+      
 
         
