--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -12,7 +12,7 @@ block content
 
         img(src="/images/poster.jpg", alt="")
 
-        h1 Сайт про истории кнопок
+        h1 Сайт про истории кнопок 123
 
         p Вот тут у нас будет первая страница
         
