--- a/src/pages/page-1.pug
+++ b/src/pages/page-1.pug
@@ -7,17 +7,18 @@ block content
 
   .ids__wrapper
     .ids__text
-      
-      
       section
         .ids__stack.M
 
-        h2
-          a(href='/page-1') Пуск
+        img(src="/images/flash.png", alt="")
 
+        h1 История фонарика
         p Вот тут у нас будет первая страница
         
 
 
+        h2
+          a(href='/page-2') Learn more
+      
 
         
