--- a/src/pages/page-2.pug
+++ b/src/pages/page-2.pug
@@ -9,8 +9,9 @@ block content
       section
 
         .ids__stack.M
+        h1 Что-то про камеру
+        p У меня есть оригинальный каталог Кодака начала 20 века. Могу отсканировать (сорри, не перевернуто)
 
-        h1 тут у нас вторая страница
         h2
           a(href='/page-3') Далее
 
