--- a/src/pages/page-3.pug
+++ b/src/pages/page-3.pug
@@ -10,7 +10,7 @@ block content
 
         .ids__stack.M
 
-        h1 тут у нас тряться страница
-        h2 А всё, конец
+        h1 тут у нас это, ну вы поняли
+        h2 ... всё, конец
 
         
