--- a/src/pages/page-4.pug
+++ b/src/pages/page-4.pug
@@ -10,7 +10,7 @@ block content
 
         .ids__stack.M
 
-        h1 тут у нас вторая страница
+        h1 тут у нас это, ну вы поняли
         h2
           a(href='/page-3') Далее
 
