--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -6,23 +6,10 @@ block meta
 block content
   .top__space
   .ids__wrapper
-    .intro-text#output
+    .intro-text
+      #output
     .ids__stack.S
-    .button#switch
-      .wrapper 
-        span
-          .circle.circle-12
-          .circle.circle-11
-          .circle.circle-10 
-          .circle.circle-9
-          .circle.circle-8
-          .circle.circle-7
-          .circle.circle-6 
-          .circle.circle-5 
-          .circle.circle-4 
-          .circle.circle-3 
-          .circle.circle-2 
-          .circle.circle-1
+    .button#switch Призыв к действию
     
     .ids__stack.M
     .explanation
